--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -2,9 +2,9 @@
 # Your theme name
 theme: "dot-org-hugo-theme"
 # Title of your website (required).
-title: "Dot Org Theme Demo"
+title: "Supporting Children's Pathways"
 # Default time zone for time stamps; use any valid tz database name: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
-timeZone: "America/Los_Angeles"
+timeZone: "Europe/London"
 # Defines the minimum amount of words to reddened in a summary
 summaryLength: 50
 
