--- a/config/production/hugo.yaml
+++ b/config/production/hugo.yaml
@@ -1,6 +1,6 @@
 ######################## production configuration ####################
 # The base URL of your site (required). This will be prepended to all relative URLs.
-baseURL: https://www.supportingchildrenspathways.org/
+baseURL: https://supportingchildrenspathways.org/
 googleAnalytics:
 enableRobotsTXT: true
 build:
